src/app/chef/chef.component.css
main {
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center center;
  background-repeat: repeat;
  background-image: url("data:image/svg+xml;utf8,%3Csvg width=%222000%22 height=%221000%22 xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cdefs%3E%3ClinearGradient id=%22a%22 gradientTransform=%22rotate(90)%22%3E%3Cstop offset=%225%25%22 stop-color=%22%23f2762e%22%2F%3E%3Cstop offset=%2295%25%22 stop-color=%22%23f59862%22%2F%3E%3C%2FlinearGradient%3E%3C%2Fdefs%3E%3Cpath fill=%22%23f2ceae%22 d=%22M0 0h2000v1000H0z%22%2F%3E%3Cpath d=%22M0 500c82.468-42.156 164.936-84.312 237-67 72.064 17.312 133.726 94.093 203 86 69.274-8.093 146.162-101.059 225-122 78.838-20.941 159.626 30.141 236 78s148.333 92.493 215 72c66.667-20.493 128.04-106.113 203-112 74.96-5.887 163.505 67.958 242 67 78.495-.958 146.941-76.72 226-82 79.059-5.28 168.731 59.92 206 85 37.269 25.08 22.134 10.04 47-5l-40 500H0Z%22 fill=%22url(%23a)%22%2F%3E%3C%2Fsvg%3E");
  position: absolute;
}

#title {
  margin: 2vh 0;
  font-family: "Montserrat", sans-serif;
  font-weight: 500;
  font-size: 3em;
  text-align: center;
}

.card-orders {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.card-order {
  background-color: white;
  width: 20vw;
  height: 25vh;
  margin: auto;
  margin-top: 10vh;
  margin-left: 10px;
  margin-right: 10px;
  padding: 10px;
  border-radius: 5%;
  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-family: "Montserrat", sans-serif;
  font-size: 0.8em;
  line-height: 1.5em;
}

span {
  margin-left: 10px;
}

#timer {
  color: red;
}

button {
  background-color: #bbe4dd;
  width: 60%;
  height: 2em;
  margin-top: 20px;
  align-self: center;
  border-radius: 10%;
  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
  border: 0;
  font-family: "Montserrat", sans-serif;
  font-size: 1em;
  font-weight: 400;
}

